--- a/src/css/TrainerProfile.css
+++ b/src/css/TrainerProfile.css
@@ -23,9 +23,19 @@
     justify-content: space-evenly;
 }
 
-.profile-edit-icon {
+.profile-edit-icon, .saved-workouts-edit-icon {
     cursor: pointer;
     max-width: fit-content;
+}
+
+.saved-workouts-edit-icon {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 0.5rem;
+    position: absolute;
+    bottom: 2.5%;
+    right: 2.5%;
 }
 
 .profile-logout-icon {
@@ -43,6 +53,10 @@
 .profile-info {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    margin-bottom: 2%;
+    text-align: center;
 }
 
 .profile-pic {
@@ -60,12 +74,17 @@
 .profile-description {
     grid-row: span 2;
     margin: 2%;
+    text-align: justify;
+    padding: 3%;
 }
 
 /* --------------------------- Saved Workouts styles ------------------------------------------- */
 
 .saved-workouts {
     height: 40%;
+    position: relative;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
 }
 
 .saved-workouts-content {
@@ -74,6 +93,8 @@
     margin: auto;
     justify-content: center;
     flex-direction: column;
+    /* font-family: 'Poppins', sans-serif;
+    font-size: 16px; */
 }
 
 .saved-workouts-content-row {
