--- a/src/css/TrainerHome.css
+++ b/src/css/TrainerHome.css
@@ -322,6 +322,7 @@ header .icons span:hover {
     padding: 0.5rem;
 } */
 
+
 .schedule-meeting-popup-close-button, .add-client-popup-close-button {
     margin: auto;
     /* font-weight: 500;
@@ -335,6 +336,19 @@ header .icons span:hover {
     justify-content: center;
 }
 
+.popup-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.5;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+}
+
 .schedule-meeting-popup, .add-client-popup {
     position: absolute;
     margin: 7.5%;
@@ -342,7 +356,7 @@ header .icons span:hover {
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 1;
+    z-index: 2;
     /* display: flex;
     flex-direction: column;
     justify-content: center; */
@@ -379,4 +393,37 @@ header .icons span:hover {
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     text-align: center;
+}
+
+
+/* ------------------------ Edit Clients Popup ----------------------- */
+
+.edit-clients-table {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    /*align-items: center; */
+    /* height: 50%; */
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+}
+
+.edit-clients-table-header-row > *, .edit-clients-table-row > * {
+    width: 33%;
+}
+
+.edit-clients-table-header-row {
+    display: flex;
+    justify-content: space-evenly;
+    font-weight: 700;
+    border-bottom: 1px solid #000;
+}
+
+.edit-clients-table-row {
+    border-bottom: 1px solid #ddd;
+    display: flex;
+    justify-content: space-evenly;
 }
