--- a/src/css/TrainerHome.css
+++ b/src/css/TrainerHome.css
@@ -159,8 +159,10 @@ header .icons span:hover {
 }
 .calendar .days li {
     z-index: 1;
-    cursor: pointer;
     margin-top: 15px;
+}
+.calendar .days .current-month {
+    cursor: pointer;
 }
 .days li.inactive {
     color: #aaa;
@@ -179,7 +181,7 @@ header .icons span:hover {
     border-radius: 50%;
     transform: translate(-50%, -50%);
 }
-.days li:hover::before{
+.days .current-month li:hover::before{
     background: #f2f2f2;
 }
 .days li.active::before{
