--- a/src/css/TrainerManageClients.css
+++ b/src/css/TrainerManageClients.css
@@ -239,7 +239,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 1;
+    z-index: 2;
     /* display: flex;
     flex-direction: column;
     justify-content: center; */
@@ -306,6 +306,19 @@
     cursor: pointer;
 }
 
+.workout-details-popup-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.5;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 3;
+}
+
 .workout-details-popup {
     position: absolute;
     margin: 10%;
@@ -313,7 +326,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 2;
+    z-index: 4;
     /* display: flex;
     flex-direction: column;
     justify-content: center; */
