--- a/src/css/TrainerProfile.css
+++ b/src/css/TrainerProfile.css
@@ -131,6 +131,8 @@
     flex-direction: column;
     justify-content: center; */
     align-items: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
 }
 
 .saved-workouts-popup-table {
