--- a/src/css/TrainerProfile.css
+++ b/src/css/TrainerProfile.css
@@ -54,7 +54,7 @@
 /* --------------------------- Profile styles ------------------------------------------- */
 
 .profile {
-    height: 100%;
+    height: 80%;
 }
 
 .profile-info {
@@ -88,7 +88,7 @@
 /* --------------------------- Saved Workouts styles ------------------------------------------- */
 
 .saved-workouts {
-    height: 40%;
+    /* height: 40%; */
     position: relative;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
@@ -161,7 +161,7 @@ th, td {
 /* --------------------------- Create Workout styles ------------------------------------------- */
 
 .create-workout {
-    height: 100%;
+    height: 80%;
 }
 
 .create-workout-card {
@@ -189,13 +189,18 @@ th, td {
 .create-workout-form {
     display: flex;
     flex-direction: column;
+    height: 80%;
+    /* justify-content: space-between; */
     /* gap: 1.5rem; */
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    position: relative;
 }
 
 .create-workout-form-item {
     position: relative;
     font-size: 1.3rem;
-    width: 100%;
+    width: 90%;
     margin: auto;
     padding: 2% 0;
     display: flex;
@@ -212,6 +217,8 @@ th, td {
     background-color: rgb(245, 245, 245);
     flex-grow: 1;
     box-shadow: rgb(0 0 0 / 10%) 0px 2px 1px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
 }
 
 .create-workout-exercise {
@@ -235,6 +242,36 @@ th, td {
     background-color: rgb(245, 245, 245);
     flex-grow: 1;
     box-shadow: rgb(0 0 0 / 20%) 0px 2px 1px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+}
+
+.exercises-header-row {
+    display: flex;
+    width: 80%;
+    margin: 2% auto;
+    justify-content: space-evenly;
+}
+.exercises-header-row > * {
+    width: 33%;
+    text-align: center;
+    font-weight: 700;
+}
+
+.create-exercise-button {
+    display: block;
+    background-color: black;
+    color: white;
+    padding: 0.2rem 1rem;
+    border-radius: 100px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    text-align: center;
+    width: 20%;
+    margin: 2% auto 2%;
+    cursor: pointer;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
 }
 
 .create-workout-button {
@@ -246,12 +283,19 @@ th, td {
     text-transform: uppercase;
     letter-spacing: 2px;
     text-align: center;
-    width: 20%;
-    margin: 0 auto 2%;
+    width: 100%;
+    margin: 2% 0 2%;
+    cursor: pointer;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
 }
 
-/* .create-workout-submit-button {
+.create-workout-button-container {
+    position: absolute;
+    width: 20%;
+    bottom: 10%;
+    right: 40%;
+}
 
-} */
 
 
