--- a/src/css/TrainerLogin.css
+++ b/src/css/TrainerLogin.css
@@ -94,6 +94,7 @@
     border-radius: 100px;
     text-transform: uppercase;
     letter-spacing: 2px;
+    cursor: pointer;
 }
 .login-button a {
     text-decoration: none;
@@ -105,4 +106,11 @@
 .login-footer {
     text-align: center;
     margin-top: 1.5rem;
+}
+
+#alert {
+    color: red;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+
 }
