--- a/src/css/TrainerCatchUp.css
+++ b/src/css/TrainerCatchUp.css
@@ -202,12 +202,25 @@
 }
 
 .feedback-summary-table {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    /* height: 80%; */
+    display: flex;
+    flex-direction: column;
     font-family: 'Poppins', sans-serif;
     font-size: 30px;
     margin-bottom: 1%;
+}
+
+.feedback-summary-table-weeks-row, .feedback-summary-table-feedback-row {
+    width: 98%;
+    display: flex;
+    margin: auto;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.feedback-summary-week, .feedback-summary-icon {
+    /* display: flex; */
+    width: 14%;
+    text-align: center;
 }
 
 .feedback-summary-day {
@@ -231,12 +244,35 @@
     padding: 0;
 }
 
+.progress-chart-header {
+    position: relative;
+    z-index: 2;
+}
+
 .progress-chart-image {
     /* width: 100%; */
     height: 265px;
     width: 425px;
     margin: 0 2.5%;
 }
+
+#progress-chart-container {
+    position: relative;
+    /* height: 50%; */
+    z-index: 1;
+    max-height: 30vh;
+    top: -7.5vh;
+}
+
+/* .plot-container {
+    position: relative;
+    max-height: 30vh;
+}
+
+.plot-container .user-select-none {
+    position: relative;
+    max-height: 30vh;
+} */
 
 /* --------------------------- Goals Styles ----------------------------------*/
 
@@ -257,7 +293,7 @@
 
 /* --------------------------- CalSummary Styles ----------------------------------*/
 .calorie-summary {
-    height: fit-content;
+    min-height: 15vh;
 } 
 
 .calorie-summary-table {
