--- a/src/css/TrainerManageClients.css
+++ b/src/css/TrainerManageClients.css
@@ -112,7 +112,7 @@
 /* --------------------------- Intake Styles ----------------------------------*/
 
 .manage-clients-intake {
-    height: 100%;
+    min-height: 25vh;
     overflow: hidden;
 }
 
@@ -177,12 +177,13 @@
 
 /* --------------------------- ManageClientDescription Styles ----------------------------------*/
 
-.client-description {
+.client-description-content-container {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding-bottom: 2%;
+    position: relative;
 }
 
 .client-description-content, #edit-client-description {
@@ -201,6 +202,8 @@
 
 .edit-description-icon {
     font-size: 1.25rem;
+    position: relative;
+    top: -0.25rem;
 }
 
 /* --------------------------- CatchUpNote Styles ----------------------------------*/
@@ -209,6 +212,7 @@
     min-height: 20vh;
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
+    overflow-y: scroll;
 }
 
 .manage-clients-catch-up-notes-textbox {
